feat:增加自动更新和打包