@@ -136,19 +136,21 @@
                     <vendor>NAU-YYF</vendor>
                     <destination>target/dist</destination>
                     <mainClass>com.nau_yyf.ArmoredAssaultApplication</mainClass>
-                    <type>${pkg.type}</type>
-                    <icon>${icon.path}</icon>
+                    <type>DMG</type>
+                    <icon>src/main/resources/images/logo/tank_logo.icns</icon>
                     
                     <javaOptions>
                         <option>-Dfile.encoding=UTF-8</option>
                         <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
-                        <option>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</option>
-                        <option>${pkg.jvmArgs}</option>
                     </javaOptions>
                     
                     <input>${project.build.directory}/dependency</input>
                     <mainJar>${project.artifactId}-${project.version}.jar</mainJar>
-                    <runtimeImage>${java.home}</runtimeImage>
+                    
+                    <runtimeImage>/Library/Java/JavaVirtualMachines/liberica-jdk-17-full.jdk/Contents/Home</runtimeImage>
+                    
+                    <macPackageIdentifier>com.nau_yyf.ArmoredAssault</macPackageIdentifier>
+                    <macAppStore>false</macAppStore>
                 </configuration>
             </plugin>
 
@@ -264,47 +266,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>mac</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                </os>
-            </activation>
-            <properties>
-                <pkg.type>dmg</pkg.type>
-                <pkg.jvmArgs>-Dglass.platform=mac</pkg.jvmArgs>
-                <icon.path>src/main/resources/images/logo/tank_logo.icns</icon.path>
-            </properties>
-        </profile>
-        <profile>
-            <id>windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <properties>
-                <pkg.type>msi</pkg.type>
-                <pkg.jvmArgs></pkg.jvmArgs>
-                <icon.path>src/main/resources/images/logo/tank_logo.ico</icon.path>
-            </properties>
-        </profile>
-        <profile>
-            <id>linux</id>
-            <activation>
-                <os>
-                    <family>unix</family>
-                    <name>Linux</name>
-                </os>
-            </activation>
-            <properties>
-                <pkg.type>deb</pkg.type>
-                <pkg.jvmArgs>-Dglass.platform=gtk</pkg.jvmArgs>
-                <icon.path>src/main/resources/images/logo/tank_logo.png</icon.path>
-            </properties>
-        </profile>
-    </profiles>
 </project>
